# godot_local_assets_browser

./: .gitignore  README.md  dev_build.sh  icon.svg.import  project.godot
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-release.yml
addons/local_assets/: Assets_template.json  Icon.svg.import  local_assets.gd  plugin.cfg
addons/local_assets/Components/: Item.gd  Item.tscn
addons/local_assets/Components/Item/: Item.gd  Item.tscn
addons/local_assets/Components/Tag/: Tag.tscn
addons/local_assets/Components/asset_item/: asset_item.gd  asset_item.tscn
addons/local_assets/Scripts/: AssetCopier.gd  AssetFinder.gd  AssetSorter.gd  ModelPreviewer.gd  PaginationBar.gd  PreviewWindow.gd
addons/local_assets/asset_editor/: asset_editor.gd  asset_editor.tscn
addons/local_assets/menu/: menu.gd  menu.tscn
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs
