[package]
name = "AssetManager"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { version = "0.4.4", features = ["api-4-2", "experimental-threads"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
regex = "1.10"
